--- a/tour.html
+++ b/tour.html
@@ -134,7 +134,7 @@
 <body>
   <header>
     <h1>WARPAINT</h1>
-    <img src="images/warpaintlogo.png" alt="Warpaint's logo">
+    <img src="warpaintlogo.png" alt="Warpaint's logo">
 
   </header>
 
@@ -173,22 +173,22 @@
 
       <figure>
         <a href="https://www.warpaintwarpaint.com/">
-          <img src="images/warpaintalbum.jpg" alt="Warpaint's Album Cover">
-          <figcaption>About us.</figcaption>
+          <img src="warpaintalbum.jpg" alt="Warpaint's Album Cover">
+          <figcaption>About Us</figcaption>
         </a>
       </figure>
 
       <figure>
         <a href="tour.html">
-          <img src="images/warpaintbw.jpg" alt="Warpaint's Members in shadow silhouette">
+          <img src="warpaintbw.jpg" alt="Warpaint's Members in shadow silhouette">
           <figcaption>Tour Dates</figcaption>
         </a>
       </figure>
 
       <figure>
-        <a href="tour.html">
-          <img src="images/warpaintbuilding.jpg" alt="Warpaint band member in front of buildings">
-          <figcaption>Join The Fan Club!</figcaption>
+        <a href="form.html">
+          <img src="warpaintbuilding.jpg" alt="Warpaint band member in front of buildings">
+          <figcaption>Join the Fan Club!</figcaption>
         </a>
       </figure>
 
@@ -197,9 +197,9 @@
 
     <div class="closing-image">
       <picture>
-        <source media="(max-width: 799px)" srcset="images/warpaint-400.jpg">
-        <source media="(min-width: 800px)" srcset="images/warpaint_1200.jpg">
-        <img src="images/warpaint_1200.jpg" alt="Closeup of Warpaint band members in front of white background">
+        <source media="(max-width: 799px)" srcset="warpaint-400.jpg">
+        <source media="(min-width: 800px)" srcset="warpaint_1200.jpg">
+        <img src="warpaint_1200.jpg" alt="Closeup of Warpaint band members in front of white background">
       </picture>
     </div>
 
