--- a/form.html
+++ b/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
   <meta charset="utf-8">
@@ -168,23 +168,18 @@
 
       <figure>
         <a href="https://www.warpaintwarpaint.com/">
-          <img src="warpaintalbum.jpg" alt="Warpaint's Album Cover">
-          <figcaption>About Us</figcaption>
-        </a>
+          <img src="warpaintalbum_400.jpg" alt="Warpaint's Album Cover"></a>
       </figure>
 
       <figure>
         <a href="tour.html">
-          <img src="warpaintbw.jpg" alt="Warpaint's Members in shadow silhouette">
-          <figcaption>Tour Dates</figcaption>
+          <img src="warpaintbw_400.jpg" alt="Warpaint's Members in shadow silhouette">
         </a>
       </figure>
 
       <figure>
         <a href="form.html">
-          <img src="warpaintbuilding.jpg" alt="Warpaint band member in front of buildings">
-          <figcaption>Join the Fan Club!</figcaption>
-        </a>
+          <img src="warpaintbuilding_400.jpg" alt="Warpaint band member in front of buildings"></a>
       </figure>
 
       <div class="clearfix"></div>
