--- a/tour.html
+++ b/tour.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
   <meta charset="utf-8">
@@ -94,6 +94,7 @@
     table {
       width: 400px;
       /*border-spacing: 40px;*/
+    padding: 10px 10px 10px 10px;
     }
 
     caption {
@@ -108,6 +109,7 @@
     caption, table, th, td {
       margin-left: auto;
       margin-right: auto;
+      padding: 10px 10px 10px 10px;
     }
 
     table, th, td {
@@ -139,7 +141,6 @@
   </header>
 
   <main>
-    <article>
         <table>
           <caption>TOUR DATES</caption>
           <tr>
@@ -167,29 +168,23 @@
             <td>San Diego, CA</td>
           </tr>
         </table>
-    </article>
 
     <div class="further-info">
 
       <figure>
         <a href="https://www.warpaintwarpaint.com/">
-          <img src="warpaintalbum.jpg" alt="Warpaint's Album Cover">
-          <figcaption>About Us</figcaption>
-        </a>
+          <img src="warpaintalbum_400.jpg" alt="Warpaint's Album Cover"></a>
       </figure>
 
       <figure>
         <a href="tour.html">
-          <img src="warpaintbw.jpg" alt="Warpaint's Members in shadow silhouette">
-          <figcaption>Tour Dates</figcaption>
+          <img src="warpaintbw_400.jpg" alt="Warpaint's Members in shadow silhouette">
         </a>
       </figure>
 
       <figure>
         <a href="form.html">
-          <img src="warpaintbuilding.jpg" alt="Warpaint band member in front of buildings">
-          <figcaption>Join the Fan Club!</figcaption>
-        </a>
+          <img src="warpaintbuilding_400.jpg" alt="Warpaint band member in front of buildings"></a>
       </figure>
 
       <div class="clearfix"></div>
