--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
   <meta charset="utf-8">
@@ -60,6 +60,8 @@
       float: left;
       margin: 0 20px 20px 0;
       max-width: 100%;
+      width: 560px;
+      height: 315px;
     }
 
     /* further info links */
@@ -77,6 +79,7 @@
       display: block;
       float: left;
     }
+
 
     .further-info img {
       max-width: 100%;
@@ -103,37 +106,31 @@
 
   <main>
     <article>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/yOFxb0F2F2A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/yOFxb0F2F2A" allowfullscreen></iframe>
 
       <h2>Welcome to Warpaint's Fan Page</h2>
 
       <p>Warpaint was born in 2004 in the city of Los Angeles, California. As of 2020, Warpaint is working on their new album.</p>
 
-      <p>Click on the images below to find more information about the band/movie.</p>
+      <p>Click on the images below to find more information about the band.</p>
     </article>
 
     <div class="further-info">
+    <figure>
+      <a href="https://www.warpaintwarpaint.com/">
+        <img src="warpaintalbum_400.jpg" alt="Warpaint's Album Cover"></a>
+    </figure>
 
-      <figure>
-        <a href="https://www.warpaintwarpaint.com/">
-          <img src="warpaintalbum.jpg" alt="Warpaint's Album Cover">
-          <figcaption>About Us</figcaption>
-        </a>
-      </figure>
+    <figure>
+      <a href="tour.html">
+        <img src="warpaintbw_400.jpg" alt="Warpaint's Members in shadow silhouette">
+      </a>
+    </figure>
 
-      <figure>
-        <a href="tour.html">
-          <img src="warpaintbw.jpg" alt="Warpaint's Members in shadow silhouette">
-          <figcaption>Tour Dates</figcaption>
-        </a>
-      </figure>
-
-      <figure>
-        <a href="form.html">
-          <img src="warpaintbuilding.jpg" alt="Warpaint band member in front of buildings">
-          <figcaption>Join the Fan Club!</figcaption>
-        </a>
-      </figure>
+    <figure>
+      <a href="form.html">
+        <img src="warpaintbuilding_400.jpg" alt="Warpaint band member in front of buildings"></a>
+    </figure>
 
       <div class="clearfix"></div>
     </div>
