final index edit

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
       <h2>Welcome to Warpaint's Fan Page</h2>
 
-      <p>Warpaint was born in 2004 in the city of Los Angeles, California. As of 2020, Warpaint is working on their new album.</p>
+      <p>Warpaint was born in 2004 in the city of Los Angeles, California. The current lineup is founders Emily Kokal, Theresa Wayman and Jenny Lee Lindberg, and Stella Mozgawa, who joined the band in 2009. As of 2020, Warpaint is working on their new album.</p>
 
       <p>Click on the images below to find more information about the band.</p>
     </article>
